--- a/projects/rpc/asdoc/en_US/mx/rpc/http/mxml/examples/HTTPServiceExample.mxml
+++ b/projects/rpc/asdoc/en_US/mx/rpc/http/mxml/examples/HTTPServiceExample.mxml
@@ -1,23 +1,28 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Simple example to demonstrate the HTTPService tag. -->
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml"
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
+     xmlns:s="library://ns.adobe.com/flex/spark" 
+     xmlns:mx="library://ns.adobe.com/flex/mx"
     creationComplete="feedRequest.send();">
-
-    <!-- The url property specifies the location of the requested file, 
-    in this case the RSS 2.0 feed of Matt Chotin's blog. 
-    As of this writing, the URL was still valid, but you should 
-    check to make sure it hasn't changed. 
-    You should use the latest RSS 2.0 URL listed on the right side of 
-    the blog at http://www.adobe.com/go/mchotinblog. -->
-
-    <mx:HTTPService 
-        id="feedRequest" 
-        url="http://weblogs.macromedia.com/mchotin/index.xml" 
-        useProxy="false" />
-
+        
+        <!-- The url property specifies the location of the requested file, 
+        in this case the RSS 2.0 feed of Matt Chotin's blog. 
+        As of this writing, the URL was still valid, but you should 
+        check to make sure it hasn't changed. 
+        You should use the latest RSS 2.0 URL listed on the right side of 
+        the blog at http://www.adobe.com/go/mchotinblog. -->
+        
+    
+    <fx:Declarations>
+        <mx:HTTPService 
+            id="feedRequest" 
+            url="http://weblogs.macromedia.com/mchotin/index.xml" 
+            useProxy="false" />
+    </fx:Declarations>
+        
     <mx:Panel title="HTTPService Example" height="75%" width="75%" 
         paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
-
+            
         <mx:DataGrid id="dgPosts" height="50%" width="75%" 
             dataProvider="{feedRequest.lastResult.rss.channel.item}">
             <mx:columns>
@@ -25,8 +30,7 @@
                 <mx:DataGridColumn headerText="Date" dataField="pubDate"/>
             </mx:columns>
         </mx:DataGrid>
-
+            
         <mx:TextArea height="50%" width="75%" htmlText="{dgPosts.selectedItem.description}"/>
-
-    </mx:Panel>	
-</mx:Application>
+    </mx:Panel>    
+</s:Application>
