Transferred from the Adobe Open Source Subversion Repository
Revision: 2520
Author:   kelin@adobe.com
Date:     2008-07-17T20:36:21.699750Z

Log Message: 
-----------
Initial TrackBase, Slider, HSlider, and VSlider checkin (with wireframe skins!).

TrackBase is a subclass of Range that provides thumb dragging functionality along a track. Slider and eventually ScrollBar will subclass TrackBase. Slider subclasses TrackBase and adds Slider-specific functionality like keyboard handling and track-click handling. HSlider and VSlider are initial implementations with tentative wireframe skins. Note: ScrollBar has not been changed to subclass TrackBase yet.

-Updated manifest/css files
-Added slider examples to flex4test

Reviewer: Jason
Bugs: -
QA: Yes

Modified Paths:
--------------
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/component/HSlider.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/skin/HSliderSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/skin/HSliderThumbSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/skin/VSliderTrackSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/component/TrackBase.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/gumbo-manifest.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/component/VSlider.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/skin/VSliderSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/skin

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -28,6 +28,11 @@ HScrollBar
     skinZZ: ClassReference("flex.skin.HScrollBarSkin");
 }
 
+HSlider
+{
+    skinZZ: ClassReference("flex.skin.HSliderSkin");
+}
+
 ItemsComponent
 {
 	skinZZ: ClassReference("flex.skin.ItemsComponentSkin");
@@ -76,6 +81,11 @@ ToggleButton
 VScrollBar
 {
 	skinZZ: ClassReference("flex.skin.VScrollBarSkin");
+}
+
+VSlider
+{
+    skinZZ: ClassReference("flex.skin.VSliderSkin");
 }
 
 .boldText 
