Transferred from the Adobe Open Source Subversion Repository
Revision: 3066
Author:   hmuller@adobe.com
Date:     2008-09-03T00:37:53.096113Z

Log Message: 
-----------
Scroller prototype.  In theory this version should support scrolling
Group or an object that implements IViewport.  The scrolling policy
is effectively "auto".

QE: No
Doc: No
Checkintests: Pass
Reviewer: Ryan

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/core/Group.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/component/Scroller.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/intf/IViewport.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/skin/ScrollerSkin.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274804 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -58,6 +58,11 @@ RadioButton
 	skinZZ: ClassReference("flex.skin.RadioButtonSkin");
 }
 
+Scroller
+{
+    skinZZ: ClassReference("flex.skin.ScrollerSkin");
+}
+
 Selector
 {
 	skinZZ: ClassReference("flex.skin.SelectorSkin");
