Transferred from the Adobe Open Source Subversion Repository
Revision: 3509
Author:   jimurphy@adobe.com
Date:     2008-10-07T18:19:17.646255Z

Log Message: 
-----------
Rename of flex -> mx. 

For compatibility reasons it was decided that the new functionality remain integrated with the old framework, although we will continue to build two separate SWCs, one with primarily existing framework classes, and one with new Flex 4 classes. This change removes duplicate names from the Flex 4 framework to avoid class name overlapping with the old framework code.  The naming overlap consists of two major areas:  New Components, and New Effects

Modified Paths:
--------------
386 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274807 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -13,89 +13,89 @@
 
 /* Default Skins */
 
-Button
+FxButton
 {
-	skinZZ: ClassReference("flex.skin.ButtonSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxButtonSkin");
 }
 
-CheckBox
+FxCheckBox
 {
-	skinZZ: ClassReference("flex.skin.CheckBoxSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxCheckBoxSkin");
 }
 
-DataComponent
+FxDataComponent
 {
-	skinZZ: ClassReference("flex.skin.DataComponentSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxDataComponentSkin");
 }
 
-HScrollBar
+FxHScrollBar
 {
-    skinZZ: ClassReference("flex.skin.HScrollBarSkin");
+    skinZZ: ClassReference("mx.skins.spark.FxHScrollBarSkin");
 }
 
-HSlider
+FxHSlider
 {
-    skinZZ: ClassReference("flex.skin.HSliderSkin");
+    skinZZ: ClassReference("mx.skins.spark.FxHSliderSkin");
 }
 
-ItemsComponent
+FxItemsComponent
 {
-	skinZZ: ClassReference("flex.skin.ItemsComponentSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxItemsComponentSkin");
 }
 
-List
+FxList
 {
-	skinZZ: ClassReference("flex.skin.ListSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxListSkin");
 }
 
-NumericStepper
+FxNumericStepper
 {
-    skinZZ: ClassReference("flex.skin.NumericStepperSkin");
+    skinZZ: ClassReference("mx.skins.spark.FxNumericStepperSkin");
 }
 
-RadioButton
+FxRadioButton
 {
-	skinZZ: ClassReference("flex.skin.RadioButtonSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxRadioButtonSkin");
 }
 
-Scroller
+FxScroller
 {
-    skinZZ: ClassReference("flex.skin.ScrollerSkin");
+    skinZZ: ClassReference("mx.skins.spark.FxScrollerSkin");
 }
 
-Selector
+FxSelector
 {
-	skinZZ: ClassReference("flex.skin.SelectorSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxSelectorSkin");
 }
 
-Spinner
+FxSpinner
 {
-    skinZZ: ClassReference("flex.skin.SpinnerSkin");    
+    skinZZ: ClassReference("mx.skins.spark.FxSpinnerSkin");    
 }
 
-TextArea
+FxTextArea
 {
-	skinZZ: ClassReference("flex.skin.TextAreaSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxTextAreaSkin");
 }
 
-TextInput
+FxTextInput
 {
-	skinZZ: ClassReference("flex.skin.TextInputSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxTextInputSkin");
 }
 
-ToggleButton
+FxToggleButton
 {
-	skinZZ: ClassReference("flex.skin.ToggleButtonSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxToggleButtonSkin");
 }
 
-VScrollBar
+FxVScrollBar
 {
-	skinZZ: ClassReference("flex.skin.VScrollBarSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxVScrollBarSkin");
 }
 
-VSlider
+FxVSlider
 {
-    skinZZ: ClassReference("flex.skin.VSliderSkin");
+    skinZZ: ClassReference("mx.skins.spark.FxVSliderSkin");
 }
 
 .boldText 
@@ -105,8 +105,8 @@ VSlider
 
 /* Override Flex 3 defaults */
 
-Application
+FxApplication
 {
-	skinZZ: ClassReference("flex.skin.ApplicationSkin");
+	skinZZ: ClassReference("mx.skins.spark.FxApplicationSkin");
 	backgroundGradientColors: #FFFFFF, #FFFFFF; /* TODO: remove this stuff */
 }
