Transferred from the Adobe Open Source Subversion Repository
Revision: 3528
Author:   gruehle@adobe.com
Date:     2008-10-09T00:10:59.153602Z

Log Message: 
-----------
New Spark skins for Gumbo components. The wireframe skins will be re-packaged into a theme in a future checkin. 

The default font for all Gumbo components is Arial 12 normal weight. In order to avoid conflict with the default font for Halo components, the Gumbo text styles are defined on three type selectors: FxButton, FxTextBase, and FxTextBox. If you want to change the default font for Gumbo components, you'll need to change it in all three selectors. This is a temporary solution until we have Spark skins for our Halo components.

This checkin also includes a workaround for SDK-17222. The workaround is to include a reference to FxHScrollBar and FxVScrollBar in FxTextArea, and a reference to FxScroller in FxList. This is a temporary workaround that will be removed when the bug is fixed.

Note: the files in the flex4test project have not been updated for the rename. This checkin does not resolve that issue.

Bugs: SDK-16302, SDK-16297, SDK-16444, SDK-16629, SDK-16779, SDK-16052
QE: These skins are the current definition of the spark look and feel. There are some discrepancies with the XD specs that XD will be resolving (eg all fonts are Arial 12)

Modified Paths:
--------------
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/assets</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxDefaultItemRenderer.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxScrollBarDownButtonSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/assets/SpinnerDownArrow.png</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxVSliderThumbSkin.mxml</path>
<path kind="file" action="M">/fl

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -16,6 +16,12 @@
 FxButton
 {
 	skinZZ: ClassReference("mx.skins.spark.FxButtonSkin");
+	
+	/* These font styles are shared by all Button subclasses,
+	   including ToggleButton, RadioButton, and CheckBox. */
+    fontFamily: Arial;
+    fontSize: 12;
+    color: 0;
 }
 
 FxCheckBox
@@ -93,15 +99,27 @@ FxVSlider
     skinZZ: ClassReference("mx.skins.spark.FxVSliderSkin");
 }
 
-.boldText 
-{
-	fontWeight: bold;
-}
-
-/* Override Flex 3 defaults */
-
 FxApplication
 {
 	skinZZ: ClassReference("mx.skins.spark.FxApplicationSkin");
-	backgroundGradientColors: #FFFFFF, #FFFFFF; /* TODO: remove this stuff */
+}
+
+/* Default text styles for the Gumbo components. Eventually these
+   will be moved into the global selector, but to avoid collision
+   with the Halo defaults, they are currently defined here.
+   
+   The default font settings for Gumbo components are defined in
+   three selectors: FxButton (above), TextBox, and FxTextBase. */
+TextBox
+{
+    fontFamily: Arial;
+    fontSize: 12;
+    color: 0;
+}
+
+FxTextBase
+{
+    fontFamily: Arial;
+    fontSize: 12;
+    color: 0;
 }
