Transferred from the Adobe Open Source Subversion Repository
Revision: 3552
Author:   rfrishbe@adobe.com
Date:     2008-10-09T22:07:55.906700Z

Log Message: 
-----------
This patch contains multiple changes, mostly renames, outlined below:

1.Rename properties in FxComponent: skinObject -> skin, skinZZ -> skinClass.
2.Rename property in Skin: data -> fxComponent (this also means Skin doesn’t implement IDataRenderer anymore)
3.Renames in DataGroup: Mostly around "skin" to "renderer" to get terminology correct
4.Random other cleanups: For instance changing typing of "*" to "Object" in ItemsComponent and DataGroup or removing some un-used imports in Group and GroupBase.
5.Lots of cleanup in flex4tests to deal with renaming of classes and renaming of properties
6.Gumbo-manifest.mxml  - typo...some files listed as mx.componentss.* instead of mx.components.*.  This file is going away as all components are moved into the 2009 namespace, but we'll fix this for now.
7.Defaults.css – FxDataComponent should be FxDataContainer.
8.SystemManger fix: this was in the previous SystemManager but got overwritten by a bad merge.  Jim’s aware of the issue, and I’m checking in the fix for it.

QE: Yes - Joann and Steve have pre-emptively made the changes
Doc: Yes
Bugs: SDK-17056, SDK-17174
Reviewer: Chet, Evtim

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxApplicationSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxScroller.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxNumericStepperSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/flex4test/src/NewEffects.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/flex4test/src/AddItemsTest.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -15,7 +15,7 @@
 
 FxButton
 {
-	skinZZ: ClassReference("mx.skins.spark.FxButtonSkin");
+	skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
 	
 	/* These font styles are shared by all Button subclasses,
 	   including ToggleButton, RadioButton, and CheckBox. */
@@ -26,82 +26,82 @@ FxButton
 
 FxCheckBox
 {
-	skinZZ: ClassReference("mx.skins.spark.FxCheckBoxSkin");
+	skinClass: ClassReference("mx.skins.spark.FxCheckBoxSkin");
 }
 
-FxDataComponent
+FxDataContainer
 {
-	skinZZ: ClassReference("mx.skins.spark.FxDataContainerSkin");
+	skinClass: ClassReference("mx.skins.spark.FxDataContainerSkin");
 }
 
 FxHScrollBar
 {
-    skinZZ: ClassReference("mx.skins.spark.FxHScrollBarSkin");
+    skinClass: ClassReference("mx.skins.spark.FxHScrollBarSkin");
 }
 
 FxHSlider
 {
-    skinZZ: ClassReference("mx.skins.spark.FxHSliderSkin");
+    skinClass: ClassReference("mx.skins.spark.FxHSliderSkin");
 }
 
 FxContainer
 {
-	skinZZ: ClassReference("mx.skins.spark.FxContainerSkin");
+	skinClass: ClassReference("mx.skins.spark.FxContainerSkin");
 }
 
 FxList
 {
-	skinZZ: ClassReference("mx.skins.spark.FxListSkin");
+	skinClass: ClassReference("mx.skins.spark.FxListSkin");
 }
 
 FxNumericStepper
 {
-    skinZZ: ClassReference("mx.skins.spark.FxNumericStepperSkin");
+    skinClass: ClassReference("mx.skins.spark.FxNumericStepperSkin");
 }
 
 FxRadioButton
 {
-	skinZZ: ClassReference("mx.skins.spark.FxRadioButtonSkin");
+	skinClass: ClassReference("mx.skins.spark.FxRadioButtonSkin");
 }
 
 FxScroller
 {
-    skinZZ: ClassReference("mx.skins.spark.FxScrollerSkin");
+    skinClass: ClassReference("mx.skins.spark.FxScrollerSkin");
 }
 
 FxSpinner
 {
-    skinZZ: ClassReference("mx.skins.spark.FxSpinnerSkin");    
+    skinClass: ClassReference("mx.skins.spark.FxSpinnerSkin");    
 }
 
 FxTextArea
 {
-	skinZZ: ClassReference("mx.skins.spark.FxTextAreaSkin");
+	skinClass: ClassReference("mx.skins.spark.FxTextAreaSkin");
 }
 
 FxTextInput
 {
-	skinZZ: ClassReference("mx.skins.spark.FxTextInputSkin");
+	skinClass: ClassReference("mx.skins.spark.FxTextInputSkin");
 }
 
 FxToggleButton
 {
-	skinZZ: ClassReference("mx.skins.spark.FxToggleButtonSkin");
+	skinClass: ClassReference("mx.skins.spark.FxToggleButtonSkin");
 }
 
 FxVScrollBar
 {
-	skinZZ: ClassReference("mx.skins.spark.FxVScrollBarSkin");
+	skinClass: ClassReference("mx.skins.spark.FxVScrollBarSkin");
 }
 
 FxVSlider
 {
-    skinZZ: ClassReference("mx.skins.spark.FxVSliderSkin");
+    skinClass: ClassReference("mx.skins.spark.FxVSliderSkin");
 }
 
 FxApplication
 {
-	skinZZ: ClassReference("mx.skins.spark.FxApplicationSkin");
+	skinClass: ClassReference("mx.skins.spark.FxApplicationSkin");
 }
 
 /* Default text styles for the Gumbo components. Eventually these
