Transferred from the Adobe Open Source Subversion Repository
Revision: 3724
Author:   gruehle@adobe.com
Date:     2008-10-17T21:42:20.548422Z

Log Message: 
-----------
Text style changes:

* Default text styles for Gumbo components are temporarily placed on type selectors (as of revision 3528). This checkin changes those selectors to just two: TextGraphicElement and TextView. This makes the default font work correctly for all 5 text-related tags - TextBox, TextGraphic, TextView, FxTextArea, and FxTextInput.

* Since the default text styles are temporarily on type selectors, setting text styles on component tags was not working. This checkin fixes that by explicitly setting the "styleName" property of the labelField (Button) and textView (FxTextBase) skin parts to the component itself. This way, any styles set on the component will take precedence over styles set on the text type selectors.

QE Notes: Text styles can be set on component tags (ie <FxButton fontSize="24" />). This should be tested.
Doc Notes: We should add a release note about changing the default text styles for Gumbo components. This is done on the TextGraphicElement and TextView type selectors.
Bugs: SDK-17159
Reviewer: Deepa

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/baseClasses/FxTextBase.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274812 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -16,12 +16,6 @@
 FxButton
 {
 	skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
-	
-	/* These font styles are shared by all Button subclasses,
-	   including ToggleButton, RadioButton, and CheckBox. */
-    fontFamily: Arial;
-    fontSize: 12;
-    color: 0;
 }
 
 FxCheckBox
@@ -109,15 +103,15 @@ FxApplication
    with the Halo defaults, they are currently defined here.
    
    The default font settings for Gumbo components are defined in
-   three selectors: FxButton (above), TextBox, and FxTextBase. */
-TextBox
+   two selectors: TextGraphicElement, and TextView. */
+TextGraphicElement
 {
     fontFamily: Arial;
     fontSize: 12;
     color: 0;
 }
 
-FxTextBase
+TextView
 {
     fontFamily: Arial;
     fontSize: 12;
