Transferred from the Adobe Open Source Subversion Repository
Revision: 3960
Author:   rfrishbe@adobe.com
Date:     2008-10-29T21:41:47.852153Z

Log Message: 
-----------
Small cleanup for FxApplication.  Now that we have unique names for FxApplication and Applicaiton, we can change the background color in defaults.css.  This is related to SDK-16721, but is more cleanup than actually fixing the bug, which is about the compiler default background color.

QE Notes: None
Doc Notes: None
Bugs: SDK-16721
Reviewer: Deepa

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxApplication.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274814 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -96,6 +96,7 @@ FxVSlider
 FxApplication
 {
 	skinClass: ClassReference("mx.skins.spark.FxApplicationSkin");
+	backgroundColor: #FFFFFF;
 }
 
 FxComponent
