Transferred from the Adobe Open Source Subversion Repository
Revision: 4075
Author:   gosmith@adobe.com
Date:     2008-11-11T22:15:03.236222Z

Log Message: 
-----------
TextBox now supports the 'direction', 'lineThrough', 'textDecoration', and 'tabStops' styles, and the "start" and "end" values of the 'textAlign' style.

The default value of 'textAlign' for Gumbo components is now "start" rather than "left". This is currently done in the type selectors for TextGraphicElement and TextView rather than in the 'global' selector, to avoid changing the default for Halo components.

QE Notes: New functionality to test.
Doc Notes: None
Bugs: Part of SDK-18014
Reviewer: Glenn

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/styles/metadata/AdvancedCharacterFormatTextStyles.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/styles/metadata/BasicParagraphFormatTextStyles.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/graphics/TextBox.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/styles/metadata/AdvancedParagraphFormatTextStyles.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/styles/metadata/BasicCharacterFormatTextStyles.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/graphics/graphicsClasses/TextBlockComposer.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274815 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -112,14 +112,16 @@ FxComponent
    two selectors: TextGraphicElement, and TextView. */
 TextGraphicElement
 {
-    fontFamily: Arial;
-    fontSize: 12;
     color: 0;
+    fontFamily: "Arial";
+    fontSize: 12;
+    textAlign: "start";
 }
 
 TextView
 {
-    fontFamily: Arial;
-    fontSize: 12;
     color: 0;
+    fontFamily: "Arial";
+    fontSize: 12;
+    textAlign: "start";
 }
