Transferred from the Adobe Open Source Subversion Repository
Revision: 4094
Author:   egeorgie@adobe.com
Date:     2008-11-13T02:59:45.957146Z

Log Message: 
-----------
Fix bug http://bugs.adobe.com/jira/browse/SDK-17970 verticalAlign, textAlign hardcoded into Button and ToggleButton skins;
http://bugs.adobe.com/jira/browse/SDK-18011 Setting fontWeight to bold on FxButton is not respected (fontWeight=normal hardcoded in skin)

The fix is to update the skin stroke to scale.

QE Notes: None
Doc Notes: None
Bugs: SDK-17970, SDK-18011
Reviewer: Glenn
tests: checkintests

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxToggleButtonSkin.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274816 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -13,14 +13,32 @@
 
 /* Default Skins */
 
+FxApplication
+{
+    skinClass: ClassReference("mx.skins.spark.FxApplicationSkin");
+    backgroundColor: #FFFFFF;
+}
+
 FxButton
 {
 	skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
+	textAlign: "center";
+	verticalAlign: "middle";
 }
 
 FxCheckBox
 {
 	skinClass: ClassReference("mx.skins.spark.FxCheckBoxSkin");
+}
+
+FxComponent
+{
+    focusSkin: ClassReference("mx.skins.spark.FxFocusSkin");
+}
+
+FxContainer
+{
+    skinClass: ClassReference("mx.skins.spark.FxContainerSkin");
 }
 
 FxDataContainer
@@ -36,11 +54,6 @@ FxHScrollBar
 FxHSlider
 {
     skinClass: ClassReference("mx.skins.spark.FxHSliderSkin");
-}
-
-FxContainer
-{
-	skinClass: ClassReference("mx.skins.spark.FxContainerSkin");
 }
 
 FxList
@@ -81,6 +94,8 @@ FxTextInput
 FxToggleButton
 {
 	skinClass: ClassReference("mx.skins.spark.FxToggleButtonSkin");
+	textAlign: "center";
+	verticalAlign: "middle";
 }
 
 FxVScrollBar
@@ -91,17 +106,6 @@ FxVScrollBar
 FxVSlider
 {
     skinClass: ClassReference("mx.skins.spark.FxVSliderSkin");
-}
-
-FxApplication
-{
-	skinClass: ClassReference("mx.skins.spark.FxApplicationSkin");
-	backgroundColor: #FFFFFF;
-}
-
-FxComponent
-{
-    focusSkin: ClassReference("mx.skins.spark.FxFocusSkin");
 }
 
 /* Default text styles for the Gumbo components. Eventually these
