Transferred from the Adobe Open Source Subversion Repository
Revision: 4096
Author:   aharui@adobe.com
Date:     2008-11-13T05:53:00.515677Z

Log Message: 
-----------
FxButtonBar initial checkin.
Also implemented IDataRenderer in FxButton.

QE Notes: None
Doc Notes: None
Bugs: None
Reviewer: Glenn
tests: checkintests

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxButtonBar.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxButtonBar.png</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxButtonBarSkin.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274817 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -26,6 +26,11 @@ FxButton
 	verticalAlign: "middle";
 }
 
+FxButtonBar
+{
+	skinClass: ClassReference("mx.skins.spark.FxButtonBarSkin");
+}
+
 FxCheckBox
 {
 	skinClass: ClassReference("mx.skins.spark.FxCheckBoxSkin");
@@ -64,6 +69,11 @@ FxList
 FxNumericStepper
 {
     skinClass: ClassReference("mx.skins.spark.FxNumericStepperSkin");
+}
+
+FxPanel
+{
+	skinClass: ClassReference("mx.skins.spark.FxPanelSkin");
 }
 
 FxRadioButton
