Transferred from the Adobe Open Source Subversion Repository
Revision: 4120
Author:   egeorgie@adobe.com
Date:     2008-11-14T22:25:32.725088Z

Log Message: 
-----------
Fix bug http://bugs.adobe.com/jira/browse/SDK-18084 FxCheckBox is inheriting styles from FxButton 
http://bugs.adobe.com/jira/browse/SDK-18086 FxCheckBox does not respect width setting
http://bugs.adobe.com/jira/browse/SDK-18010 FxButton label wrapping strangely when explicit width is set

QE Notes: None
Doc Notes: None
Bugs: SDK-18084, SDK-18086, SDK-18010
Reviewer: Glenn
tests: checkintests, mustella (button, togglebutton, checkbox)

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxCheckBoxSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxRadioButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274818 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -21,6 +21,7 @@ FxApplication
 
 FxButton
 {
+    lineBreak: "explicit";
 	skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
 	textAlign: "center";
 	verticalAlign: "middle";
@@ -34,6 +35,7 @@ FxButtonBar
 FxCheckBox
 {
 	skinClass: ClassReference("mx.skins.spark.FxCheckBoxSkin");
+    textAlign: "start";
 }
 
 FxComponent
@@ -79,6 +81,7 @@ FxPanel
 FxRadioButton
 {
 	skinClass: ClassReference("mx.skins.spark.FxRadioButtonSkin");
+    textAlign: "start";
 }
 
 FxScroller
