Transferred from the Adobe Open Source Subversion Repository
Revision: 4314
Author:   gruehle@adobe.com
Date:     2008-12-15T22:40:02.103600Z

Log Message: 
-----------
Initial checkin of style support in the Spark skins. See the "Styling Gumbo Components" spec for details.

QE Notes: Bitmap compares will be different for many skins. Joan will update the bitmaps.
Doc Notes: See spec for details.
Bugs: -
Reviewer: Corey

Modified Paths:
--------------
<path kind="dir" action="D">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/assets</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxDefaultItemRenderer.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxFocusSkin.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/ItemRenderer.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxScrollBarDownButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxVSliderSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxVSliderThumbSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxVScrollBarSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxListSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxHSliderTrackSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxScrollBarUpButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/sr

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -142,3 +142,14 @@ TextView
     fontSize: 12;
     textAlign: "start";
 }
+
+global
+{
+    /* color: #000000; */
+    baseColor: #CCCCCC;
+    contentColor: #FFFFFF;
+    rollOverColor: #CEDBEF;
+    selectionColor: #A8C6EE;
+    focusColor: #70B2EE;
+    symbolColor: #000000;
+}
