--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -147,7 +147,7 @@ global
 {
     /* color: #000000; */
     baseColor: #CCCCCC;
-    contentColor: #FFFFFF;
+    contentBackgroundColor: #FFFFFF;
     rollOverColor: #CEDBEF;
     selectionColor: #A8C6EE;
     focusColor: #70B2EE;
